--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,13 @@
   margin: .5rem;
   padding: .5rem;
 }
-
+.section--technologies .technology-items .single-item:hover{
+  box-shadow: var(--box-shadow);
+  transform: scale(1.1);
+}
+.section--technologies .technology-items .single-item:hover img{
+  filter: brightness(0.15);
+}
 .section--technologies .subsection--experience{
   background-color: var(--primary-color-light);
   padding: 1.5rem;
@@ -204,6 +210,10 @@
 
 
 
+
+
+
+
 .section--projects .card{
   margin-bottom: 3rem;
   max-width: 420px;
@@ -221,8 +231,6 @@
   transition: none; 
 }
 .section--projects .mix{
-  /* padding-left: 1.5rem;
-  padding-right: 1.5rem; */
   max-width: 400px;
   margin: 1rem auto;
 }
@@ -239,6 +247,7 @@
   border: none;
   border: 1px solid #aaa;
   outline: none;
+  background-color: #eaeaea;
 }
 .section--projects .filter-control:focus{
   outline: none;
