Updating portfolio for github pages. Fixed nav, intro, tech, why me sections

--- a/css/partials/theme.css
+++ b/css/partials/theme.css
@@ -59,6 +59,7 @@ li{
 
 .btn-primary{
   background: var(--gradient-color);
+  border-color: transparent;
 }
 .btn-primary:hover{
  box-shadow: var(--box-shadow);
