--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,15 @@
   }
 }
 
-
-
+.nav-link--as-form button{
+  outline: none;
+  border: none;
+  background: transparent;
+}
+.navbar-light .navbar-nav .nav-item:hover .nav-link--as-form button{
+  color: white;
+  transition: all .3s, color 0s;
+}
 
 
 
